@@ -1,0 +1,12 @@
+/+__ INVALID _____________________+/
+auto x = foo.
+/+__ INVALID _____________________+/
+auto x = foo.;
+/+__ INVALID _____________________+/
+auto x = 1.
+
+/+__ INVALID _____________________+/
+auto x = foo. .dfd;
+
+/+__ INVALID _____________________+/
+foo.
